fixed cropped images

--- a/components/body/desktop.styl
+++ b/components/body/desktop.styl
@@ -19,8 +19,8 @@
       width 100%
       margin-top 0px
       height 54vw
-      background-size cover
-      background-position center center
+      background-size contain
+      background-position top center
       background-repeat no-repeat
       max-height 400px
 
